calculator-example/kubernetes/no-lb/deployment-square-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-client
  labels:
    app: aggregator-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-client
  template:
    metadata:
      labels:
        app: aggregator-client
    spec:
      containers:
        - name: aggregator-client
          image: quay.io/vndube/aggregator-client
          ports:
          - containerPort: 8080
            protocol: TCP
