calculator-example/kubernetes/no-lb/service-calc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-calculator
  name: grpc-calculator-service
spec:
  type: ClusterIP
  selector:
    app: grpc-calculator
  ports:
  - name: 6565-tcp
    port: 80
    targetPort: 6565
