calculator-example/kubernetes/no-lb/service-rest-square.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rest-square
  name: rest-square-service
spec:
  type: ClusterIP
  selector:
    app: rest-square
  ports:
  - name: 7575-tcp
    port: 80
    targetPort: 7575
