calculator-example/kubernetes/no-lb/service-square.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aggregator-client
  name: aggregator-client-service
spec:
  type: ClusterIP
  selector:
    app: aggregator-client
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
