calculator-example/kubernetes/no-lb/route-square.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: aggregator-client
  name: aggregator-client-route
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: aggregator-client-service
