calculator-example/kubernetes/no-lb/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grpc-aggregator
  name: grpc-aggregator-route
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: grpc-aggregator-service
